review of json response body and http caching
