# src/Controller/API/UserApiController.php
@@ -9,7 +9,6 @@ use FOS\RestBundle\Controller\AbstractFOSRestController;
 use FOS\RestBundle\Controller\Annotations as Rest;
 use FOS\RestBundle\Request\ParamFetcherInterface;
 use FOS\RestBundle\View\View;
-use Knp\Component\Pager\Pagination\PaginationInterface;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\ParamConverter;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\HttpKernel\Exception\BadRequestHttpException;
@@ -46,9 +45,14 @@ class UserApiController extends AbstractFOSRestController
      * )
      * @Rest\View(serializerGroups={ "Default", "items"="listUser" })
      */
-    public function listUsers(ParamFetcherInterface $paramFetcher): PaginationInterface
+    public function listUsers(ParamFetcherInterface $paramFetcher): View
     {
-        return $this->userRepository->paginatedUsers($paramFetcher->get('limit'), $paramFetcher->get('page'));
+         $users = $this->userRepository->paginatedUsers($paramFetcher->get('limit'), $paramFetcher->get('page'));
+
+        return View::create()
+            ->setStatusCode(200)
+            ->setFormat("json")
+            ->setData(["status" => "ok", "status_code" => "200", "data" => $users]);
     }
 
     /**
@@ -59,9 +63,12 @@ class UserApiController extends AbstractFOSRestController
      * )
      * @Rest\View(serializerGroups={ "Default", "items"="showUser" })
      */
-    public function showUser(User $user): User
+    public function showUser(User $user): View
     {
-        return $user;
+        return View::create()
+            ->setStatusCode(200)
+            ->setFormat("json")
+            ->setData(["status" => "ok", "status_code" => "200", "data" => $user]);
     }
 
     /**
@@ -78,7 +85,7 @@ class UserApiController extends AbstractFOSRestController
      *     }
      * )
      */
-    public function createUsers(User $user, ConstraintViolationList $violations): View
+    public function createUsers(User $user, ConstraintViolationList $violations, UserRepository $userRepository): View
     {
         if (count($violations)) {
             $message = 'The JSON sent contains invalid data. Here are the errors you need to correct: ';
@@ -95,16 +102,11 @@ class UserApiController extends AbstractFOSRestController
         $this->entityManager->persist($user);
         $this->entityManager->flush();
 
-        return $this->view(
-            $user,
-            Response::HTTP_CREATED,
-            [
-                'Location' => $this->generateUrl("api_user_show", [
-                    'id' => $user->getId(),
-                    UrlGeneratorInterface::ABSOLUTE_URL
-                ])
-            ]
-        );
+        $data = $userRepository->findOneBy(['id' => $user->getId()]);
+        return View::create()
+            ->setStatusCode(201)
+            ->setFormat("json")
+            ->setData(["status" => "Created!", "status_code" => "201", "data" => $data]);
     }
 
     /**
